# excel-agent-demo

./: .env  CLAUDE.md  HANDOVER.md  README.md  app.py  create_excel.py  git reset --hard HEAD@{1}  main.py  pyproject.toml  requirements.txt  run.py  test.py  test_agent_excel_web_simulation.py  test_agent_simulation.py  test_api.py  test_equipment_cost_tool.py  test_finance_tool.py  test_import.py  test_input_reading.py  設備成本滾算工具說明.md
.ipynb_checkpoints/: run-checkpoint.py
Excel/: data.xlsx
Excel Generic Template/: 70408000  excel公版.xlsx  ~$excel公版.xlsx
Excel User Data/: LLM輸入公版(1) .xlsx  測試_模擬輸入.xlsx  表 100_模擬輸入.xlsx  表 101_模擬輸入.xlsx  表 102_模擬輸入.xlsx  表 103_模擬輸入.xlsx  表 104_模擬輸入.xlsx  表 105_模擬輸入.xlsx  表 106_模擬輸入.xlsx  表 110_模擬輸入.xlsx  表 115_整合表格.xlsx  表 116_整合表格.xlsx  表 118_整合表格.xlsx  表 62_模擬輸入.xlsx  表 63_模擬輸入.xlsx  表 64_模擬輸入.xlsx  表 67_整合表格.xlsx  表 92_模擬輸入 2.xlsx  表 92_模擬輸入.xlsx  表 94_整合表格.xlsx  表 95_整合表格.xlsx  表 96_整合表格.xlsx  表 98_模擬輸入 2.xlsx  表 99_模擬輸入 2.xlsx
Excel final/: 滾算後記錄_20260118_002527.xlsx  滾算後記錄_20260118_004202.xlsx  滾算後記錄_20260118_004246.xlsx  滾算後記錄_20260118_004920.xlsx  滾算後記錄_20260118_005133.xlsx
api/: agent_routes.py  auth_routes.py  case_routes.py  irr_routes.py  llm_agent_routes.py
config/: settings.py
core/: agent.py  connection.py  conversation.py
excel/: LLM輸入公版(1) .xlsx  表 20_模擬輸入.xlsx  表 21_模擬輸入.xlsx  表 22_模擬輸入.xlsx  表 42_模擬輸入.xlsx  表 44_模擬輸入.xlsx  表 45_模擬輸入.xlsx  表 46_模擬輸入.xlsx  表 47_模擬輸入.xlsx  表 48_整合表格.xlsx  表 49_模擬輸入.xlsx  表 52_模擬輸入.xlsx  表 55_模擬輸入.xlsx  表 62_模擬輸入.xlsx  表 79_模擬輸入.xlsx  表 80_模擬輸入.xlsx  表 86_整合表格.xlsx  (+2 more)
(+99 files in other folders)
