[project]
name = "ai-agent2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask==2.3.3",
    "flask-cors==4.0.0",
    "flask-sqlalchemy==3.1.1",
    "numpy>=2.4.3",
    "numpy-financial==1.0.0",
    "ollama>=0.6.1",
    "openpyxl==3.1.2",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
]
